--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.3.0",
+    "@react-native-firebase/app": "^14.3.0",
+    "@react-native-firebase/database": "^14.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
